--- a/templates/home.html
+++ b/templates/home.html
@@ -16,7 +16,8 @@
             {% if msg %}
                 <div>{{msg}}</div>
             {% endif %}
-            <button type="button" class="b1">Play as Guest</button>
+            <a href="quiz">
+            <button type="button" class="b1">Play as Guest</button></a>
             <br>
             <a href="login">
             <button type="button" class="b2">Login</button></a>
