--- a/templates/selectsub.html
+++ b/templates/selectsub.html
@@ -19,21 +19,25 @@
 <body>
     <center>
         <div class="container">
+            <a href="SE">
             <button class="sub">
                 Software Engineering
-            </button>
+            </button></a>
             <br>
+            <a href="IP">
             <button class="sub">
                 Internet Programming
-            </button>
+            </button></a>
             <br>
+            <a href="DWM">
             <button class="sub">
                 Data Warehouse Mining
-            </button>
+            </button></a>
             <br>
+            <a href="CN">
             <button class="sub" >
                 Computer Network
-            </button>
+            </button></a>
         </div>
     </center>
     
