--- a/templates/login.html
+++ b/templates/login.html
@@ -3,34 +3,51 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login or Signup</title>
-    <link rel="stylesheet" href="{% static login.css %}">
+	<meta charset="UTF-8">
+	<title>Login Page in HTML with CSS Code Example</title>
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+
+
+	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
+		integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+	<link rel="stylesheet" href="{% static login.css%}">
+
 </head>
 
 <body>
-    <center>
-        {% if msg %}
-            <div style="color: red;">*{{msg}}</div>
-        {% endif %}
-        <div class="div">
-            <div class="banner"></div>
-            <div class="content">
-                <form action="confirmlogin" method="POST"> {% csrf_token %}
-                    <p class="login" name="login">Log in</p>
-                    <p class="username">Email/Username</p>
-                    <input type="text" name="username">
-                    <br>
-                    <p class="password">Password</p>
-                    <input type="password" name="password">
-                    <br>
-                    <button class="submit">Submit</button>
-                </form>
-            </div>
-        </div>
-    </center>
+	{% if msg %}
+		<div style="color: red;">*{{msg}}</div>
+	{% endif %}
+	<!-- partial:index.partial.html -->
+	<div class="box-form">
+		<div class="left">
+			<div class="overlay">
+				<h1>Welcome</h1>
+			</div>
+		</div>
+
+
+		<div class="right">
+			<h5>Login</h5>
+			<p>Don't have an account? <a href="signup">Create Your Account</a> it takes less than a minute</p>
+			<div class="inputs">
+				<form action="confirmlogin" method="POST"> {% csrf_token %}
+					<input type="text" placeholder="user name" name="username">
+					<br>
+					<input type="password" placeholder="password" name="password">
+					<button type="submit">Login</button>
+				</form>
+			</div>
+
+			<br><br>
+
+			<div class="remember-me--forget-password">
+				<p>forget password?</p>
+			</div>
+		</div>
+
+	</div>
+
 </body>
 
 </html>
