quiz page done and added 3 tries

--- a/templates/home.html
+++ b/templates/home.html
@@ -16,7 +16,7 @@
             {% if msg %}
                 <div>{{msg}}</div>
             {% endif %}
-            <a href="quiz">
+            <a href="selectsub">
             <button type="button" class="b1">Play as Guest</button></a>
             <br>
             <a href="login">
