--- a/templates/loss.html
+++ b/templates/loss.html
@@ -5,10 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lost</title>
+
+    <style>
+        .restart{
+            font-size: 30px;
+            margin-top: 25%;
+        }
+    </style>
 </head>
 <body>
     Sorry to see...
     <br>
     You unable to find the right ans
+    <center>
+    <a href="../../selectsub">
+    <button class="restart">Play Again</button></a></center>
 </body>
 </html>
