--- a/templates/selectsub.html
+++ b/templates/selectsub.html
@@ -8,16 +8,31 @@
     <style>
         .container{
             margin-top: 10%;
+            position: absolute;
+            margin-left: 40%;
+            margin-top: 10%;
         }
         .sub{
             margin: 10px; 
             padding: 30px;
             font-size: 30px;
         }
+        button{
+            width: 400px;
+        }
+        img{
+            height: 800px;
+            width: 565px;
+            position: absolute;
+            margin-left: 600px;
+        }
+        body{
+            background-color: rgb(64, 12, 12);
+        }
     </style>
 </head>
 <body>
-    <center>
+    <img src="../static/images1.jpg" alt="bgimg">
         <div class="container">
             <a href="SE">
             <button class="sub">
@@ -39,7 +54,6 @@
                 Computer Network
             </button></a>
         </div>
-    </center>
     
 </body>
 </html>
