--- a/templates/login.html
+++ b/templates/login.html
@@ -4,49 +4,74 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title>Login Page in HTML with CSS Code Example</title>
-	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-
-
-	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
-		integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-	<link rel="stylesheet" href="{% static login.css%}">
-
+	<title>Login </title>
+	<link rel="stylesheet" href="{% static 'login.css'%}">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 </head>
 
 <body>
+
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+		crossorigin="anonymous"></script>
+
 	{% if msg %}
-		<div style="color: red;">*{{msg}}</div>
+	<div style="color: red;">*{{msg}}</div>
 	{% endif %}
-	<!-- partial:index.partial.html -->
-	<div class="box-form">
-		<div class="left">
-			<div class="overlay">
-				<h1>Welcome</h1>
+	<section class="vh-100" style="background-color: rgb(43, 110, 136);">
+		<div class="container py-5 h-100">
+			<div class="row d-flex justify-content-center align-items-center h-100">
+				<div class="col col-xl-10">
+					<div class="card" style="border-radius: 1rem;">
+						<div class="row g-0">
+							<div class="col-md-6 col-lg-5 d-none d-md-block">
+								<img src="{%static 'login.png'%}"
+									alt="login form" class="img-fluid" style="border-radius: 1rem 0 0 1rem; height: 600px;" />
+							</div>
+							<div class="col-md-6 col-lg-7 d-flex align-items-center">
+								<div class="card-body p-4 p-lg-5 text-black">
+
+									<form action="confirmlogin" method="POST">{%csrf_token%}
+
+										<!-- <div class="d-flex align-items-center mb-3 pb-1">
+											<i class="fas fa-cubes fa-2x me-3" style="color: #ff6219;"></i>
+											<span class="h1 fw-bold mb-0">Logo</span>
+										</div> -->
+
+										<h1 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">Sign in into your account</h1>
+
+										<div class="form-outline mb-4">
+											Username
+											<input type="text" id="form2Example17"
+												class="form-control form-control-lg" name="username">
+										</div>
+
+										<div class="form-outline mb-4">
+											Password
+											<input type="password" id="form2Example27"
+												class="form-control form-control-lg" name="password">
+										</div>
+
+										<div class="pt-1 mb-4">
+											<button class="btn btn-dark btn-lg btn-block" type="submit">Login</button>
+										</div>
+									</form>
+									<a class="small text-muted" href="forgotpass">Forgot password?</a>
+									<p class="mb-5 pb-lg-2" style="color: #393f81;">Don't have an account? <a
+											href="signup" style="color: #393f81;">Register here</a></p>
+						<!-- <a href="#!" class="small text-muted">Terms of use.</a>
+						<a href="#!" class="small text-muted">Privacy policy</a> -->
+
+
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
-
-
-		<div class="right">
-			<h5>Login</h5>
-			<p>Don't have an account? <a href="signup">Create Your Account</a> it takes less than a minute</p>
-			<div class="inputs">
-				<form action="confirmlogin" method="POST"> {% csrf_token %}
-					<input type="text" placeholder="user name" name="username">
-					<br>
-					<input type="password" placeholder="password" name="password">
-					<button type="submit">Login</button>
-				</form>
-			</div>
-
-			<br><br>
-
-			<div class="remember-me--forget-password">
-				<p>forget password?</p>
-			</div>
-		</div>
-
-	</div>
+	</section>
 
 </body>
 
