--- a/templates/won.html
+++ b/templates/won.html
@@ -5,16 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Right</title>
+    <style>
+        button{
+            height: 50px; 
+            width: 100px;
+            font-size: 30px;
+        }
+    </style>
 </head>
-<body>
-    You entered write answer
-    <br>
-    want to continue
-    <a href="../../{{sub}}">
-    <button class="continue">Next</button></a>
-    <br>
-    wanna quit
-    <a href="../../../..">
-    <button class="quit">Quit</button></a>
+<body style="margin-top: 10%; font-size: 40px; background-color: rgb(168, 200, 228);">
+    <center>
+        You entered the right answer
+        <br>
+        <br>
+        <br>
+        Want to continue
+        <br>
+        <a href="../../{{sub}}">
+        <button class="continue">Next</button></a>
+        <br>
+        Wanna quit
+        <br>
+        <a href="../../../..">
+        <button class="quit">Quit</button></a>
+    </center>
 </body>
 </html>
