--- a/templates/loss.html
+++ b/templates/loss.html
@@ -7,17 +7,20 @@
     <title>Lost</title>
 
     <style>
-        .restart{
+        button{
+            height: 70px; 
+            width: 200px;
             font-size: 30px;
-            margin-top: 25%;
         }
     </style>
 </head>
-<body>
+<body style="margin-top: 10%; font-size: 40px; background-color: rgb(168, 200, 228);">
+    <center>
     Sorry to see...
     <br>
-    You unable to find the right ans
-    <center>
+    Unable to find the right answer
+    <br>
+    <br>
     <a href="../../selectsub">
     <button class="restart">Play Again</button></a></center>
 </body>
