--- a/templates/selectsub.html
+++ b/templates/selectsub.html
@@ -9,50 +9,65 @@
         .container{
             margin-top: 10%;
             position: absolute;
-            margin-left: 40%;
-            margin-top: 10%;
+            margin-left: 720px;
+            margin-top: 100px;
         }
-        .sub{
-            margin: 10px; 
-            padding: 30px;
-            font-size: 30px;
+
+        .container h1{
+            color: white;
+            padding: 0px;
         }
-        button{
-            width: 400px;
-        }
+        
         img{
             height: 800px;
             width: 565px;
             position: absolute;
             margin-left: 600px;
         }
+
         body{
             background-color: rgb(64, 12, 12);
+        }
+
+        button{
+            margin-left: 5px;
+            width: 100px;
+            height: 50px;
         }
     </style>
 </head>
 <body>
     <img src="../static/images1.jpg" alt="bgimg">
         <div class="container">
-            <a href="SE">
-            <button class="sub">
-                Software Engineering
-            </button></a>
+
+            <h1>Software Engineering</h1>
+                <a href="easy_se"><button>Easy</button></a>
+                <a href="medium_se"><button>Medium</button></a>
+                <a href="high_se"><button>Hard</button></a>
             <br>
-            <a href="IP">
-            <button class="sub">
-                Internet Programming
-            </button></a>
+            <hr>
+
+            <h1>Internet Programming</h1>
+                <a href="easy_ip"><button>Easy</button></a>
+                <a href="medium_ip"><button>Medium</button></a>
+                <a href="high_ip"><button>Hard</button></a>
             <br>
-            <a href="DWM">
-            <button class="sub">
-                Data Warehouse Mining
-            </button></a>
+            <hr>
+
+            <h1>Data Warehouse Mining</h1>
+                <a href="easy_dwm"><button>Easy</button></a>
+                <a href="medium_dwm"><button>Medium</button></a>
+                <a href="high_dwm"><button>Hard</button></a>
             <br>
-            <a href="CN">
-            <button class="sub" >
-                Computer Network
-            </button></a>
+            <hr>
+
+            <h1>Computer Network</h1>
+                <a href="easy_cn"><button>Easy</button></a>
+                <a href="medium_cn"><button>Medium</button></a>
+                <a href="high_cn"><button>Hard</button></a>
+            <br>
+            <hr>
+
         </div>
     
 </body>
