--- a/static/home.css
+++ b/static/home.css
@@ -1,6 +1,39 @@
 *{
 	margin: 0px;
 	padding: 0px;
+	vertical-align: middle;
+}
+
+.avtar{
+	float: right;
+	align-items: baseline;
+}
+
+.avtar img{
+	margin-top: 5px;
+	width: 70px;
+	margin-right:90px;
+	border-radius: 40px;
+}
+
+.avtar p{
+	position: absolute;
+    margin-left: 12px;
+	font-size: 20px;
+	color: white;
+}
+.avtar a{
+	color: white;
+    font-size: 20px;
+    text-decoration: none;
+    margin-right: 5px;
+}
+
+.actions{
+	position: absolute;
+	margin-top: -77px;
+	margin-left: 85px;
+	margin-top: -55px;
 }
 
 .banner{
