--- a/templates/quiz.html
+++ b/templates/quiz.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -23,6 +24,7 @@
             padding: 10px;
             margin-top: 10%;
             width: 1040px;
+            margin-bottom: 50px;
         }
 
         .griditem {
@@ -39,6 +41,51 @@
         body{
             background-color: rgba(92,195,236,1);
         }
+
+        .hangman_head{
+            position: absolute;
+            width: 100px;
+            height: 100px;
+            margin-left: 100px;
+            margin-top: 130px;
+        }
+
+        .hangman_body{
+            position: absolute;
+            width: 100px;
+            height: 150px;
+            margin-top: 228px;
+            margin-left: 100px;
+        }
+
+        .horizontalline{
+            height: 20px;
+            width: 210px;
+            background-color: red;
+            margin-top: 85px;
+            position: absolute;
+            margin-left: 20px;
+        }
+
+        .verticalline{
+            width: 20px;
+            height: 350px;
+            position: absolute;
+            background-color: red;
+            margin-top: 70px;
+            margin-left: 40px;
+        }
+
+        .circle{
+            width: 70px;
+            height: 70px;
+            position: absolute;
+            background-color: red;
+            margin-top: 100px;
+            margin-left: 170px;
+            border-radius: 50px;
+        }
+
     </style>
 
 </head>
@@ -47,53 +94,65 @@
     {% if sub %}
 		<div style="color: red;">*{{sub}}</div>
 	{% endif %}
-    <center>
+    <br>
+    <div class="verticalline"></div>
+    <div class="horizontalline"></div>
+    <div class="circle"></div>
+    {% if tries %}
+        <p style="position: absolute; margin-left: 95%;">{{tries}}</p>
+    {% endif %}
+    {% if tries <= 2 %}
+        <img src="{% static 'hangman_body.png' %}" class="hangman_body">
+        {% if tries <= 1 %}
+            <img src="{% static 'hangman_head.png' %}" class="hangman_head">
+        {% endif %}
+    {% endif %}
+        <div style="display: flex;justify-content: center; align-items: center; text-align: center; height: 100%; background-color: snow;">
+            <div>
+                <p>{{question}}</p>
+                <br>
+
+                <label>{{ansstr}}</label>
+
+                <div class="grid-contianer">
 
 
-        <p>{{question}}</p>
-        <br>
+                    
+                    <a href="{% if not url%}quiz/{% endif %}a"><button class="griditem" {% if 'a' in lst%} disabled {% endif %}>A</button></a>
+                    <a href="{% if not url%}quiz/{% endif %}b"><button class="griditem" {% if 'b' in lst%} disabled {% endif %}>B</button></a>
+                    <a href="{% if not url%}quiz/{% endif %}c"><button class="griditem" {% if 'c' in lst%} disabled {% endif %}>C</button></a>
+                    <a href="{% if not url%}quiz/{% endif %}d"><button class="griditem" {% if 'd' in lst%} disabled {% endif %}>D</button></a>
+                    <a href="{% if not url%}quiz/{% endif %}e"><button class="griditem" {% if 'e' in lst%} disabled {% endif %}>E</button></a>
 
-        <label>{{ansstr}}</label>
+                    <a href="{% if not url%}quiz/{% endif %}f"><button class="griditem" {% if 'f' in lst%} disabled {% endif %}>F</button></a>
+                    <a href="{% if not url%}quiz/{% endif %}g"><button class="griditem" {% if 'g' in lst%} disabled {% endif %}>G</button></a>
+                    <a href="{% if not url%}quiz/{% endif %}h"><button class="griditem" {% if 'h' in lst%} disabled {% endif %}>H</button></a>
+                    <a href="{% if not url%}quiz/{% endif %}i"><button class="griditem" {% if 'i' in lst%} disabled {% endif %}>I</button></a>
+                    <a href="{% if not url%}quiz/{% endif %}j"><button class="griditem" {% if 'j' in lst%} disabled {% endif %}>J</button></a>
 
-        <br>
-        <div class="grid-contianer">
+                    <a href="{% if not url%}quiz/{% endif %}k"><button class="griditem" {% if 'k' in lst%} disabled {% endif %}>K</button></a>
+                    <a href="{% if not url%}quiz/{% endif %}l"><button class="griditem" {% if 'l' in lst%} disabled {% endif %}>L</button></a>
+                    <a href="{% if not url%}quiz/{% endif %}m"><button class="griditem" {% if 'm' in lst%} disabled {% endif %}>M</button></a>
+                    <a href="{% if not url%}quiz/{% endif %}n"><button class="griditem" {% if 'n' in lst%} disabled {% endif %}>N</button></a>
+                    <a href="{% if not url%}quiz/{% endif %}o"><button class="griditem" {% if 'o' in lst%} disabled {% endif %}>O</button></a>
 
+                    <a href="{% if not url%}quiz/{% endif %}p"><button class="griditem" {% if 'p' in lst%} disabled {% endif %}>P</button></a>
+                    <a href="{% if not url%}quiz/{% endif %}q"><button class="griditem" {% if 'q' in lst%} disabled {% endif %}>Q</button></a>
+                    <a href="{% if not url%}quiz/{% endif %}r"><button class="griditem" {% if 'r' in lst%} disabled {% endif %}>R</button></a>
+                    <a href="{% if not url%}quiz/{% endif %}s"><button class="griditem" {% if 's' in lst%} disabled {% endif %}>S</button></a>
+                    <a href="{% if not url%}quiz/{% endif %}t"><button class="griditem" {% if 't' in lst%} disabled {% endif %}>T</button></a>
 
-            
-            <a href="{% if not url%}quiz/{{sub}}/{% endif %}a"><button class="griditem" {% if 'a' in lst%} disabled {% endif %}>A</button></a>
-            <a href="{% if not url%}quiz/{{sub}}/{% endif %}b"><button class="griditem" {% if 'b' in lst%} disabled {% endif %}>B</button></a>
-            <a href="{% if not url%}quiz/{{sub}}/{% endif %}c"><button class="griditem" {% if 'c' in lst%} disabled {% endif %}>C</button></a>
-            <a href="{% if not url%}quiz/{{sub}}/{% endif %}d"><button class="griditem" {% if 'd' in lst%} disabled {% endif %}>D</button></a>
-            <a href="{% if not url%}quiz/{{sub}}/{% endif %}e"><button class="griditem" {% if 'e' in lst%} disabled {% endif %}>E</button></a>
+                    <a href="{% if not url%}quiz/{% endif %}u"><button class="griditem" {% if 'u' in lst%} disabled {% endif %}>U</button></a>
+                    <a href="{% if not url%}quiz/{% endif %}v"><button class="griditem" {% if 'v' in lst%} disabled {% endif %}>V</button></a>
+                    <a href="{% if not url%}quiz/{% endif %}w"><button class="griditem" {% if 'w' in lst%} disabled {% endif %}>W</button></a>
+                    <a href="{% if not url%}quiz/{% endif %}x"><button class="griditem" {% if 'x' in lst%} disabled {% endif %}>X</button></a>
+                    <a href="{% if not url%}quiz/{% endif %}y"><button class="griditem" {% if 'y' in lst%} disabled {% endif %}>Y</button></a>
 
-            <a href="{% if not url%}quiz/{{sub}}/{% endif %}f"><button class="griditem" {% if 'f' in lst%} disabled {% endif %}>F</button></a>
-            <a href="{% if not url%}quiz/{{sub}}/{% endif %}g"><button class="griditem" {% if 'g' in lst%} disabled {% endif %}>G</button></a>
-            <a href="{% if not url%}quiz/{{sub}}/{% endif %}h"><button class="griditem" {% if 'h' in lst%} disabled {% endif %}>H</button></a>
-            <a href="{% if not url%}quiz/{{sub}}/{% endif %}i"><button class="griditem" {% if 'i' in lst%} disabled {% endif %}>I</button></a>
-            <a href="{% if not url%}quiz/{{sub}}/{% endif %}j"><button class="griditem" {% if 'j' in lst%} disabled {% endif %}>J</button></a>
+                    <a href="{% if not url%}quiz/{% endif %}z"><button class="griditem" {% if 'z' in lst%} disabled {% endif %}>Z</button></a>
 
-            <a href="{% if not url%}quiz/{{sub}}/{% endif %}k"><button class="griditem" {% if 'k' in lst%} disabled {% endif %}>K</button></a>
-            <a href="{% if not url%}quiz/{{sub}}/{% endif %}l"><button class="griditem" {% if 'l' in lst%} disabled {% endif %}>L</button></a>
-            <a href="{% if not url%}quiz/{{sub}}/{% endif %}m"><button class="griditem" {% if 'm' in lst%} disabled {% endif %}>M</button></a>
-            <a href="{% if not url%}quiz/{{sub}}/{% endif %}n"><button class="griditem" {% if 'n' in lst%} disabled {% endif %}>N</button></a>
-            <a href="{% if not url%}quiz/{{sub}}/{% endif %}o"><button class="griditem" {% if 'o' in lst%} disabled {% endif %}>O</button></a>
-
-            <a href="{% if not url%}quiz/{{sub}}/{% endif %}p"><button class="griditem" {% if 'p' in lst%} disabled {% endif %}>P</button></a>
-            <a href="{% if not url%}quiz/{{sub}}/{% endif %}q"><button class="griditem" {% if 'q' in lst%} disabled {% endif %}>Q</button></a>
-            <a href="{% if not url%}quiz/{{sub}}/{% endif %}r"><button class="griditem" {% if 'r' in lst%} disabled {% endif %}>R</button></a>
-            <a href="{% if not url%}quiz/{{sub}}/{% endif %}s"><button class="griditem" {% if 's' in lst%} disabled {% endif %}>S</button></a>
-            <a href="{% if not url%}quiz/{{sub}}/{% endif %}t"><button class="griditem" {% if 't' in lst%} disabled {% endif %}>T</button></a>
-
-            <a href="{% if not url%}quiz/{{sub}}/{% endif %}u"><button class="griditem" {% if 'u' in lst%} disabled {% endif %}>U</button></a>
-            <a href="{% if not url%}quiz/{{sub}}/{% endif %}v"><button class="griditem" {% if 'v' in lst%} disabled {% endif %}>V</button></a>
-            <a href="{% if not url%}quiz/{{sub}}/{% endif %}w"><button class="griditem" {% if 'w' in lst%} disabled {% endif %}>W</button></a>
-            <a href="{% if not url%}quiz/{{sub}}/{% endif %}x"><button class="griditem" {% if 'x' in lst%} disabled {% endif %}>X</button></a>
-            <a href="{% if not url%}quiz/{{sub}}/{% endif %}y"><button class="griditem" {% if 'y' in lst%} disabled {% endif %}>Y</button></a>
-
-            <a href="{% if not url%}quiz/{{sub}}/{% endif %}z"><button class="griditem" {% if 'z' in lst%} disabled {% endif %}>Z</button></a>
-
+                </div>
+            </div>
         </div>
-    </center>
 </body>
 
 </html>
