--- a/templates/signup.html
+++ b/templates/signup.html
@@ -8,6 +8,51 @@
 	<link rel="stylesheet" href="{% static 'login.css'%}">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+
+	<style>
+		.dropbtn {
+            background-color: #4CAF50;
+            color: white;
+            padding: 16px;
+            font-size: 16px;
+            border: none;
+            cursor: pointer;
+        }
+  
+        .dropdown {
+            position: relative;
+            display: inline-block;
+        }
+  
+        .dropdown-content {
+            display: none;
+            position: absolute;
+            background-color: #f9f9f9;
+            min-width: 160px;
+            box-shadow: 0px 8px 16px 
+                0px rgba(0, 0, 0, 0.2);
+            z-index: 1;
+        }
+  
+        .dropdown-content a {
+            color: black;
+            padding: 12px 16px;
+            text-decoration: none;
+            display: block;
+        }
+  
+        .dropdown-content a:hover {
+            background-color: #f1f1f1
+        }
+  
+        .dropdown:hover .dropdown-content {
+            display: block;
+        }
+  
+        .dropdown:hover .dropbtn {
+            background-color: #3e8e41;
+        }
+	</style>
 </head>
 
 <body>
@@ -26,37 +71,33 @@
 					<div class="card" style="border-radius: 1rem;">
 						<div class="row g-0">
 							<div class="col-md-6 col-lg-5 d-none d-md-block">
-								<img src="{%static 'signup.png'%}"
-									alt="login form" class="img-fluid" style="border-radius: 1rem 0 0 1rem; height: 720px;" />
+								<img src="{%static 'signup.png'%}" alt="login form" class="img-fluid"
+									style="border-radius: 1rem 0 0 1rem; height: 720px;" />
 							</div>
 							<div class="col-md-6 col-lg-7 d-flex align-items-center">
 								<div class="card-body p-4 p-lg-5 text-black">
 
 									<form action="confirmlogin" method="POST">{%csrf_token%}
-
-										<!-- <div class="d-flex align-items-center mb-3 pb-1">
-											<i class="fas fa-cubes fa-2x me-3" style="color: #ff6219;"></i>
-											<span class="h1 fw-bold mb-0">Logo</span>
-										</div> -->
-
-										<h1 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">Create your account</h1>
+										<h1 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">
+											Create your account
+										</h1>
 
 										<div class="form-outline mb-4">
 											Name
-											<input type="text" id="form2Example17"
-												class="form-control form-control-lg" name="name">
+											<input type="text" id="form2Example17" class="form-control form-control-lg"
+												name="name">
 										</div>
 
 										<div class="form-outline mb-4">
 											Username
-											<input type="text" id="form2Example27"
-												class="form-control form-control-lg" name="username">
+											<input type="text" id="form2Example27" class="form-control form-control-lg"
+												name="username">
 										</div>
 
 										<div class="form-outline mb-4">
 											Email
-											<input type="email" id="form2Example17"
-												class="form-control form-control-lg" name="name">
+											<input type="email" id="form2Example17" class="form-control form-control-lg"
+												name="name">
 										</div>
 
 										<div class="form-outline mb-4">
@@ -65,13 +106,20 @@
 												class="form-control form-control-lg" name="username">
 										</div>
 
+										<!-- <div class="form-outline mb-4">
+											<select name="avatar" id="avatar">
+												<option value="avatar1" style="background-image:url(../static/userimg1.jpg)">aklfjdls</option>
+												<option value="avatar2" style="background-image:url(../static/userimg2.jpg)">ajkfds;la</option>
+											</select>
+										</div> -->
+
 										<div class="pt-1 mb-4">
 											<button class="btn btn-dark btn-lg btn-block" type="submit">Signup</button>
 										</div>
 									</form>
 									<p class="mb-5 pb-lg-2" style="color: #393f81;">Already have an account? <a
 											href="login" style="color: #393f81;">Login</a></p>
-						<!-- <a href="#!" class="small text-muted">Terms of use.</a>
+									<!-- <a href="#!" class="small text-muted">Terms of use.</a>
 						<a href="#!" class="small text-muted">Privacy policy</a> -->
 
 
@@ -87,3 +135,4 @@
 </body>
 
 </html>
+
