--- a/templates/login.html
+++ b/templates/login.html
@@ -8,6 +8,12 @@
 	<link rel="stylesheet" href="{% static 'login.css'%}">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+
+	{% if msg %}
+		<script>
+			alert("{{msg}}");
+		</script>
+	{% endif %}
 </head>
 
 <body>
@@ -16,9 +22,6 @@
 		integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
 		crossorigin="anonymous"></script>
 
-	{% if msg %}
-	<div style="color: red;">*{{msg}}</div>
-	{% endif %}
 	<section class="vh-100" style="background-color: rgb(43, 110, 136);">
 		<div class="container py-5 h-100">
 			<div class="row d-flex justify-content-center align-items-center h-100">
@@ -44,13 +47,13 @@
 										<div class="form-outline mb-4">
 											Username
 											<input type="text" id="form2Example17"
-												class="form-control form-control-lg" name="username">
+												class="form-control form-control-lg" onkeydown="return /[a-z0-9_]/i.test(event.key)" name="username" required>
 										</div>
 
 										<div class="form-outline mb-4">
 											Password
 											<input type="password" id="form2Example27"
-												class="form-control form-control-lg" name="password">
+												class="form-control form-control-lg" name="password" required>
 										</div>
 
 										<div class="pt-1 mb-4">
