--- a/templates/home.html
+++ b/templates/home.html
@@ -11,8 +11,8 @@
 <body>
     <div class="avtar">
         {% if userlogedin %}
-            <img class="img" src="{% static 'userimg1.png' %}" alt="userimg">
-            <p>{{userlogedin}}</p>
+            <img class="img" src="{% static ''%}{{userlogedin.1}}.png" alt="userimg">
+            <p>{{userlogedin.0}}</p>
             <div class="actions">
                 <a href="account">Account</a>
                 <br>
