--- a/templates/userdetails.html
+++ b/templates/userdetails.html
@@ -1,21 +1,41 @@
+{% load static%}
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>User Details</title>
-</head>
-<body>
-    <div style="display: flex;justify-content: center; align-items: center; text-align: center; height: 100%; background-color: snow;">
-        <img src="" alt="userimg">
 
-        <div class="info">
-            Name : {{username}}
-            User Id : {{userid}}
+    <style>
+        .info {
+            padding: 5px;
+            display: initial;
+            justify-content: center;
+            align-items: center;
+            height: 100%;
+            background-color: rgb(255, 244, 197);
+        }
+    </style>
+
+</head>
+
+<body>
+    <div class="info">
+        <img src="{% static ''%}{{img}}.png" alt="userimg">
+        <br>
+        <div>
+            Name : {{name}}
+            <br>
+            User Name : {{username}}
+            <br>
             Email : {{email}}
         </div>
 
+
+
     </div>
 </body>
+
 </html>
