--- a/templates/loss.html
+++ b/templates/loss.html
@@ -22,6 +22,8 @@
     <br>
     <br>
     <a href="../../selectsub">
-    <button class="restart">Play Again</button></a></center>
+    <button class="restart">Play Again</button></a>
+    <a href="../savescore">Save My Score</a>
+    </center>
 </body>
 </html>
