--- a/templates/selectsub.html
+++ b/templates/selectsub.html
@@ -10,7 +10,7 @@
             margin-top: 10%;
             position: absolute;
             margin-left: 720px;
-            margin-top: 100px;
+            margin-top: 60px;
         }
 
         .container h1{
@@ -34,10 +34,15 @@
             width: 100px;
             height: 50px;
         }
+        .home{
+            position: absolute;
+        }
     </style>
 </head>
 <body>
+    
     <img src="../static/images1.jpg" alt="bgimg">
+    <a href="../"><button id="home">Home</button></a>
         <div class="container">
 
             <h1>Software Engineering</h1>
